fix: 리뷰 반영 및 테스트 에러 수정 (#26)